# llm-zoomcamp

./: pyproject.toml
01-intro/: Module1_Homework.ipynb
04-monitoring/: homework.ipynb
05-orchestration/: test_extraction.ipynb
05-orchestration/llm/rager/data_exporters/: ethereal_aura.py
05-orchestration/llm/rager/data_loaders/: bewitching_shard.py  kinetic_mirage.py
05-orchestration/llm/rager/pipelines/invincible_zodiac/: metadata.yaml
05-orchestration/llm/rager/pipelines/phosphorescent_empyrean/: metadata.yaml
05-orchestration/llm/rager/transformers/: radiant_cipher.py
